--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -28,7 +28,7 @@ jobs:
     - name: Build and push the Docker image
       uses: docker/build-push-action@v2
       with:
-        context: ./Docker
+        context: ./docker
         push: true
         tags: ${{ secrets.DOCKER_USERNAME }}/drupal-prod:${{ steps.tag_version.outputs.new_tag }}
     
