--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -45,7 +45,7 @@ jobs:
       run: |
         sed -i 's/__replaceWithTag__/${{ github.ref_name }}/' drupal/values.yaml
         helm package drupal --version=${{ github.ref_name }} --app-version=${{ github.ref_name }} -d ./helm-releases
-        helm repo index --url https://artsiomborisevich.github.io/devops-project/ --merge index.yaml .
+        helm repo index --url https://anton50013.github.io/project/ --merge index.yaml .
         sed -i 's/${{ github.ref_name }}/__replaceWithTag__/' drupal/values.yaml
 
 
