--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -25,12 +25,12 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Build and push the Docker image
-      uses: docker/build-push-action@v2
-      with:
-        context: ./docker
-        push: true
-        tags: ${{ secrets.DOCKER_USERNAME }}/drupal-prod:${{ steps.tag_version.outputs.new_tag }}
+#    - name: Build and push the Docker image
+#     uses: docker/build-push-action@v2
+#      with:
+#       context: ./docker
+#        push: true
+#       tags: ${{ secrets.DOCKER_USERNAME }}/drupal-prod:${{ steps.tag_version.outputs.new_tag }}
     
     - name: Helm tool installer
       uses: Azure/setup-helm@v3
